# poptimizer

./: .gitignore  README.md  Taskfile.yml  install_mongodb_server.cmd  pyproject.toml
dump/: dividends.json
dump/source/: dividends.bson
poptimizer/: app.py  config.py
poptimizer/cli/: app.py  div.py  feat.py  income.py  metrics.py  pdf.py  portfolio.py  risk.py  stats.py
poptimizer/domain/dl/: features.py
poptimizer/evolve/: evolve.py  population.py
poptimizer/evolve/chromosomes/: data.py
poptimizer/portfolio/: optimizer_resample.py  portfolio.py
portfolio/: base.yaml
