[project]
name = "poptimizer"
version = "2.0.0"
description = "Long-term portfolio optimization"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "aiohttp==3.8.1",
    "aiomoex>=2.1.2",
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.8.30",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "motor>=3.6.0",
    "numpy>=1.23.1",
    "openpyxl>=3.1.5",
    "pandas==1.5.3",
    "psutil>=6.0.0",
    "pyppeteer>=2.0.0",
    "pyyaml>=6.0.2",
    "reportlab>=4.2.2",
    "scikit-learn>=1.5.2",
    "scipy>=1.13.1",
    "torch==2.0.0",
    "tqdm>=4.66.5",
    "typer>=0.12.5",
    "tzdata>=2024.2",
    "xlsxwriter>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
